--- a/style.css
+++ b/style.css
@@ -115,7 +115,8 @@ nav {
 .cols {
     width: 50%;
 }
-.cols h1{
+
+.cols h1 {
     font-size: 55px;
     margin-top: 15px;
 }
@@ -187,25 +188,36 @@ p {
     background-color: #7f00ff;
 }
 
-#anime{
+#anime {
     animation: buton;
     animation-duration: 3s;
 }
 
-@keyframes buton{
-   0%{ transform:translate3d(-100%,0,0)}
-   100%{transform: translateZ(0);}
+@keyframes buton {
+    0% {
+        transform: translate3d(-100%, 0, 0)
+    }
+
+    100% {
+        transform: translateZ(0);
+    }
 }
 
-#anime1{
+#anime1 {
     animation: buton1;
     animation-duration: 3s;
 }
 
-@keyframes buton1{
-   0%{ transform:translate3d(100%,0,0)}
-   100%{transform: translateZ(0);}
+@keyframes buton1 {
+    0% {
+        transform: translate3d(100%, 0, 0)
+    }
+
+    100% {
+        transform: translateZ(0);
+    }
 }
+
 .imgbox {
     position: relative;
     width: 100%;
@@ -253,4 +265,164 @@ p {
         top: 50%;
         left: 50%;
     }
+}
+
+
+@media screen and (min-width:320px) and (max-width:767px) {
+    .container {
+        width: auto;
+        min-height: 80vh;
+    }
+
+    nav {
+        display: inline;
+        width: auto;
+        justify-content: space-evenly;
+        height: 80px;
+        z-index: 11;
+    }
+
+    .logo {
+        display: none;
+    }
+
+    .navitems {
+        display: flex;
+    }
+
+    .navitems li {
+        list-style: none;
+        margin: 0px 14px;
+    }
+
+    .navitems li a {
+        font-size: 13px;
+        letter-spacing: 1px;
+    }
+
+    .links a {
+        font-size: 25px;
+        color: #3d535f;
+        margin: 25px 10px;
+    }
+
+    .wrapper {
+        display: inline;
+        width: auto;
+        height: 500px;
+        justify-content: center;
+        align-items: center;
+        padding: 0 5%;
+        margin-top: -150px;
+        overflow: hidden;
+    }
+
+    .wrapper::before {
+        display: none;
+    }
+
+    .wrapper::after {
+        display: none;
+    }
+
+
+    .cols {
+        width: 100%;
+        width: 5px 25px 5px 25px;
+        margin-top: -30px;
+    }
+
+    .cols h1 {
+        font-size: 35px;
+        margin-top: 15px;
+    }
+
+    .cols0 {
+        width: 95%;
+        z-index: 5;
+    }
+
+    .topline {
+        display: block;
+        position: relative;
+        font-size: 30px;
+        letter-spacing: 5px;
+        color: #3d535f;
+        margin-left: 15px;
+    }
+
+    .topline::after {
+        position: absolute;
+        content: '';
+        height: 4px;
+        width: 45px;
+        bottom: 10px;
+        background-color: #7f00ff;
+    }
+
+    h1 {
+        display: block;
+        font-size: 25px;
+        font-family: 900;
+        color: #3d535f;
+        margin-left: 15px;
+    }
+
+    .multitext {
+        color: #7f00ff;
+        font-size: 30px;
+        text-transform: capitalize;
+    }
+
+    p {
+        display: block;
+        width: 100%;
+        margin: 2px 15px;
+        text-align: left;
+        font-size: 20px;
+        color: #3d535f;
+    }
+
+    .btns {
+        width: 100%;
+        position: relative;
+        left: 5px;
+        margin: 40px 15px;
+    }
+
+    .imgbox {
+        position: relative;
+        width: 100%;
+        height: 100%;
+    }
+
+    .imgbox img {
+        position: relative;
+        width: 250px;
+        top: -100px;
+        right: 50px;
+        animation: none;
+        height: 100%;
+    }
+
+
+    .imgbox #splash {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) rotate(-35deg);
+        width: 160%;
+        filter: saturate(200%);
+        animation: none;
+    }
+
+    #splash1 {
+        width: 400px;
+        height: 400px;
+        box-shadow: 5px 5px 5px 5px rgb(78, 139, 231);
+        border-radius: 50%;
+        margin-left: 60px;
+        margin-top: 200px;
+    }
+
 }
