--- a/about.css
+++ b/about.css
@@ -89,7 +89,8 @@ hr {
 .info2 {
     width: 48%;
     margin: 15px 15px 65px 15px;
-    display: flex;justify-content: center;
+    display: flex;
+    justify-content: center;
 }
 
 .info2 h4 {
@@ -119,4 +120,82 @@ span {
     width: 80%;
     padding-top: 45px;
     text-align: justify;
+}
+
+
+
+@media screen and (min-width:320px) and (max-width:767px) {
+
+    body {
+        overflow: hidden;
+        width: auto;
+    }
+
+    .about {
+        width: 800px;
+        height: 50vh;
+    }
+
+    nav {
+        display: inline;
+        width: 100%;
+        height: 80px;
+        z-index: 11;
+    }
+
+    .logo {
+        display: flex;
+        font-size: 30px;
+        font-weight: 800;
+        color: #3d535f;
+        letter-spacing: 2px;
+        cursor: pointer;
+        margin-left: 25px;
+        text-transform: uppercase;
+    }
+
+    .navitems {
+        display: flex;
+    }
+
+    .navitems li {
+        list-style: none;
+        margin: 0px 25px;
+    }
+
+    .navitems li a {
+        font-size: 25px;
+        letter-spacing: 1px;
+    }
+
+    .links a {
+        font-size: 35px;
+        color: #3d535f;
+        margin: 25px 18px 25px 25px;
+    }
+
+    .info1 {
+        display: inline-block;
+    }
+    
+    .info {
+        width: 100%;
+        float: inline-start;
+        line-height: 1.5;
+    }
+    .info2 {
+        width: 100%;
+        margin: 15px 15px 65px 15px;
+        display: inline-flex;
+    }
+    
+
+    .about p {
+        color: #3d535f;
+        font-size: 30px;
+        width: 80%;
+        padding-top: 15px;
+        text-align: justify;
+    }
+    
 }
