--- a/prot.css
+++ b/prot.css
@@ -93,3 +93,73 @@ margin-top: 60px;
 .box2:hover img{
     transform:scale(1.2);
 }
+
+
+@media screen and (min-width:320px) and (max-width:767px) {
+
+    body {
+        overflow: hidden;
+        width: auto;
+    }
+
+    .about {
+        width: 800px;
+        height: 50vh;
+    }
+
+    nav {
+        display: inline;
+        width: 100%;
+        height: 80px;
+        z-index: 11;
+    }
+
+    .logo {
+        display: flex;
+        font-size: 30px;
+        font-weight: 800;
+        color: #3d535f;
+        letter-spacing: 2px;
+        cursor: pointer;
+        margin-left: 25px;
+        text-transform: uppercase;
+    }
+
+    .navitems {
+        display: flex;
+    }
+
+    .navitems li {
+        list-style: none;
+        margin: 0px 25px;
+    }
+
+    .navitems li a {
+        font-size: 25px;
+        letter-spacing: 1px;
+    }
+
+    .links a {
+        font-size: 35px;
+        color: #3d535f;
+        margin: 25px 18px 25px 25px;
+    }
+
+    .box1{
+        display: block;
+        width: 100%;
+        height: 250px;
+        justify-content: space-evenly;
+        margin-top: 60px;
+        }
+
+        .box2{
+            height: 20rem;
+            width: 26rem;
+            border-radius: 1rem;
+            margin: 2rem;
+            margin-bottom: 65px;
+            overflow: hidden;
+            cursor: pointer;
+        }
+}
