--- a/style.css
+++ b/style.css
@@ -32,6 +32,12 @@ nav {
     letter-spacing: 3px;
     cursor: pointer;
     text-transform: uppercase;
+    background-image: url(fire-flames.gif);
+    background-size: cover;
+    background-position: center;
+    color: transparent;
+    background-clip: text;
+    -webkit-background-clip: text;
 }
 
 .navitems {
@@ -165,8 +171,6 @@ p {
 
 .btns {
     width: 100%;
-    position: relative;
-    left: 150px;
     margin: 40px 15px;
 }
 
@@ -174,6 +178,7 @@ p {
     border: none;
     cursor: pointer;
     font-size: 25px;
+    margin: 0px 5px;
     padding: 8px 24px;
     font-weight: 400;
     color: #fff;
@@ -272,12 +277,12 @@ p {
 
     body {
         overflow: hidden;
-        width: auto;
+        width: 100%;
     }
 
     .container {
-        width:800px;
-        height: 50vh;
+        width: 100%;
+        max-height: 200vh;
     }
 
     nav {
@@ -294,8 +299,14 @@ p {
         color: #3d535f;
         letter-spacing: 2px;
         cursor: pointer;
-        margin-left: 18px;
+        margin-left: 25px;
         text-transform: uppercase;
+        background-image: url(fire-flames.gif);
+        background-size: cover;
+        background-position: center;
+        color: transparent;
+        background-clip: text;
+        -webkit-background-clip: text;
     }
 
     .navitems {
@@ -304,7 +315,7 @@ p {
 
     .navitems li {
         list-style: none;
-        margin: 0px 18px;
+        margin: 0px 25px;
     }
 
     .navitems li a {
@@ -315,7 +326,7 @@ p {
     .links a {
         font-size: 35px;
         color: #3d535f;
-        margin: 25px 18px;
+        margin: 25px 18px 25px 25px;
     }
 
     .wrapper {
@@ -331,10 +342,14 @@ p {
 
     .wrapper::before {
         display: none;
+        height: 60px;
+        width: 60px;
     }
 
     .wrapper::after {
         display: none;
+        height: 50px;
+        width: 50px;
     }
 
 
@@ -347,7 +362,7 @@ p {
 
     .cols h1 {
         font-size: 45px;
-        margin-top: 15px;
+        margin-top: 25px;
     }
 
     .cols0 {
@@ -358,10 +373,10 @@ p {
     .topline {
         display: block;
         position: relative;
-        font-size: 30px;
+        font-size: 35px;
         letter-spacing: 5px;
         color: #3d535f;
-        margin-left: 15px;
+        margin-left: 25px;
     }
 
     .topline::after {
@@ -375,22 +390,22 @@ p {
 
     h1 {
         display: block;
-        font-size: 25px;
+        font-size: 30px;
         font-family: 900;
         color: #3d535f;
-        margin-left: 15px;
+        margin-left: 25px;
     }
 
     .multitext {
         color: #7f00ff;
-        font-size: 30px;
+        font-size: 34px;
         text-transform: capitalize;
     }
 
     p {
         display: block;
         width: 100%;
-        margin: 2px 15px;
+        margin: 2px 25px;
         text-align: left;
         font-size: 25px;
         color: #3d535f;
@@ -398,10 +413,17 @@ p {
 
     .btns {
         width: 100%;
-        position: relative;
-        left: 5px;
-        margin: 40px 25px;
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+
     }
+
+    .btns a {
+        font-size: 25px;
+        padding: 8px 24px;
+    }
+
 
     .imgbox {
         position: relative;
@@ -415,16 +437,28 @@ p {
         top: -100px;
         right: 50px;
         animation: none;
-        height: 100%;
+        height: 20%;
     }
 
 
     .imgbox #splash {
-     display: none;
+        display: none;
+        top: 10%;
+        left: 10%;
+        transform: translate(10%, 10%) rotate(-35deg);
+        width: 10%;
+        filter: saturate(20%);
+        animation: animate 4s linear infinite;
     }
 
     #splash1 {
-     display: none;
+        width: 40px;
+        display: none;
+        height: 40px;
+        box-shadow: 5px 5px 5px 5px rgb(78, 139, 231);
+        border-radius: 5%;
+        margin-left: 12px;
+        margin-top: 8px;
     }
 
 }
