--- a/about.css
+++ b/about.css
@@ -1,7 +1,6 @@
 * {
     margin: 0;
     padding: 0;
-
     font-family: "poppins", sans-serif;
 }
 
@@ -26,6 +25,12 @@ nav {
     letter-spacing: 3px;
     cursor: pointer;
     text-transform: uppercase;
+    background-image: url(fire-flames.gif);
+    background-size: cover;
+    background-position: center;
+    color: transparent;
+    background-clip: text;
+    -webkit-background-clip: text;
 }
 
 .navitems {
@@ -103,7 +108,13 @@ hr {
     background-color: #fff;
     line-height: 1.6;
 }
-
+.info2 h4:hover{
+    background-color: #3d535f;
+    color: white;
+}
+.info2 h4:hover span{
+    color: white;
+}
 .info2 span {
     color: #7f00ff;
     display: block;
@@ -126,21 +137,17 @@ span {
 
 @media screen and (min-width:320px) and (max-width:767px) {
 
-    body {
-        overflow: hidden;
-        width: auto;
-    }
 
     .about {
-        width: 800px;
-        height: 50vh;
+        width: 100%;
+        height: 200vh;
     }
 
     nav {
         display: inline;
         width: 100%;
         height: 80px;
-        z-index: 11;
+        z-index: 1;
     }
 
     .logo {
@@ -152,6 +159,12 @@ span {
         cursor: pointer;
         margin-left: 25px;
         text-transform: uppercase;
+        background-image: url(fire-flames.gif);
+        background-size: cover;
+        background-position: center;
+        color: transparent;
+        background-clip: text;
+        -webkit-background-clip: text;
     }
 
     .navitems {
@@ -160,16 +173,16 @@ span {
 
     .navitems li {
         list-style: none;
-        margin: 0px 25px;
+        margin: 0px 13px;
     }
 
     .navitems li a {
-        font-size: 25px;
+        font-size: 14px;
         letter-spacing: 1px;
     }
 
     .links a {
-        font-size: 35px;
+        font-size:35px;
         color: #3d535f;
         margin: 25px 18px 25px 25px;
     }
@@ -179,14 +192,16 @@ span {
     }
     
     .info {
-        width: 100%;
+        width: auto;
         float: inline-start;
         line-height: 1.5;
+        text-align: left;
+        font-size: 20px;
     }
     .info2 {
         width: 100%;
-        margin: 15px 15px 65px 15px;
-        display: inline-flex;
+        margin: 15px auto;
+        display: inline-block;
     }
     
 
