--- a/education.css
+++ b/education.css
@@ -26,8 +26,13 @@ nav {
     letter-spacing: 3px;
     cursor: pointer;
     text-transform: uppercase;
+    background-image: url(fire-flames.gif);
+    background-size: cover;
+    background-position: center;
+    color: transparent;
+    background-clip: text;
+    -webkit-background-clip: text;
 }
-
 .navitems {
     display: flex;
 }
@@ -118,12 +123,12 @@ hr {
 
     body {
         overflow: hidden;
-        width: auto;
+        width: 100%;
     }
 
     .about {
-        width: 800px;
-        height: 50vh;
+        width: 100%;
+        height:100px;
     }
 
     nav {
@@ -140,8 +145,14 @@ hr {
         color: #3d535f;
         letter-spacing: 2px;
         cursor: pointer;
-        margin-left: 25px;
+        margin-left: 15px;
         text-transform: uppercase;
+        background-image: url(fire-flames.gif);
+        background-size: cover;
+        background-position: center;
+        color: transparent;
+        background-clip: text;
+        -webkit-background-clip: text;
     }
 
     .navitems {
@@ -150,11 +161,11 @@ hr {
 
     .navitems li {
         list-style: none;
-        margin: 0px 25px;
+        margin: 0px 13px;
     }
 
     .navitems li a {
-        font-size: 25px;
+        font-size: 14px;
         letter-spacing: 1px;
     }
 
@@ -166,21 +177,19 @@ hr {
 
     .edu1 {
         width: 100%;
-        display: block;
-        height: 350px;
-        justify-content: space-around;
+        display: inline;
+        height: 800px;
     }
 
     .edu {
-        width: 60%;
+        width: 82%;
         height: 220px;
-        display: block;
+        display: inline-block;
         padding: 25px;
         margin-top: 45px;
     }
 
     .edu img {
         float: left;
-        padding-left: 12px;
     }
 }
