--- a/contact.css
+++ b/contact.css
@@ -26,6 +26,12 @@ nav {
     letter-spacing: 3px;
     cursor: pointer;
     text-transform: uppercase;
+    background-image: url(fire-flames.gif);
+    background-size: cover;
+    background-position: center;
+    color: transparent;
+    background-clip: text;
+    -webkit-background-clip: text;
 }
 
 .navitems {
@@ -68,6 +74,7 @@ hr {
 
 .row {
     display: flex;
+    width: 100%;
 }
 
 .contact {
@@ -79,6 +86,7 @@ hr {
 
 .contact h3 {
     float: left;
+    line-height: 1.9;
     width: 350px;
 }
 
@@ -114,7 +122,7 @@ form {
     border: #ffffff;
 }
 
-.form input:hover{
+.form input:hover {
     background-color: #e8f0fe;
 }
 
@@ -132,9 +140,11 @@ button {
     color: black;
     border: #ffffff;
 }
-.form textarea:hover{
+
+.form textarea:hover {
     background-color: #e8f0fe;
 }
+
 .form .btn {
     width: 150px;
     margin-top: 15px;
@@ -151,12 +161,12 @@ button {
 
     body {
         overflow: hidden;
-        width: auto;
+        width: 100%;
     }
 
     .about {
-        width: 800px;
-        height: 50vh;
+        width: 100%;
+        height: 70vh;
     }
 
     nav {
@@ -175,6 +185,12 @@ button {
         cursor: pointer;
         margin-left: 25px;
         text-transform: uppercase;
+        background-image: url(fire-flames.gif);
+        background-size: cover;
+        background-position: center;
+        color: transparent;
+        background-clip: text;
+        -webkit-background-clip: text;
     }
 
     .navitems {
@@ -183,11 +199,11 @@ button {
 
     .navitems li {
         list-style: none;
-        margin: 0px 25px;
+        margin: 0px 13px;
     }
 
     .navitems li a {
-        font-size: 25px;
+        font-size: 14px;
         letter-spacing: 1px;
     }
 
@@ -198,28 +214,35 @@ button {
     }
 
     .row {
-        display: block;
+        display: inline-block;
+        width: 100%;
     }
 
     .contact {
-        width: 22%;
-        padding: 5px auto;
-        display: inline-block;
-        line-height: 1.5;
+        width: 80%;
+        padding: 0;
+        display: inline;
     }
 
+    .contact h3 {
+        float: left;
+        line-height: 1.5;
+        width: 350px;
+        margin: 5px 5%;
+    }
 
     .form {
-        width: 30%;
-        padding: 65px;
+        width: 100%;
+        padding: 6px;
         display: flex;
-        margin: 5px auto;
+        margin-left: 1px;
+        margin: 0px auto;
     }
 
     form {
         /* background-color: rgba(185, 175, 175, 0.6); */
         background-color: #ffffff;
-        margin-top: 30px;
+        margin: 15px 5%;
     }
 
     .form input {
