--- a/prot.css
+++ b/prot.css
@@ -72,16 +72,16 @@ hr {
     margin: 45px 35px 15px 35px;
 }
 
-.box1{
-display: flex;
-width: 100%;
-height: 250px;
-justify-content: space-evenly;
-margin-top: 60px;
+.box1 {
+    display: flex;
+    width: 100%;
+    height: 250px;
+    justify-content: space-evenly;
+    margin-top: 60px;
 }
 
 
-.box2{
+.box2 {
     height: 20rem;
     width: 26rem;
     border-radius: 1rem;
@@ -89,36 +89,36 @@ margin-top: 60px;
     overflow: hidden;
     cursor: pointer;
 }
-.box2 img{
+
+.box2 img {
     border-radius: 10px;
     height: 100%;
     width: 100%;
     object-fit: cover;
 }
 
-.box2:hover img{
-    transform:scale(1.2);
+.box2:hover img {
+    transform: scale(1.2);
     transition: 0.4s;
 }
 
 
 @media screen and (min-width:320px) and (max-width:767px) {
-
-    body {
-        overflow: hidden;
-        width: auto;
-    }
-
-    .about {
-        width: 800px;
-        height: 50vh;
+   body{
+    width: 100%;
+    overflow: hidden;
+   } 
+   
+   .about {
+        width: 100%;
+        height: 200vh;
     }
 
     nav {
         display: inline;
         width: 100%;
         height: 80px;
-        z-index: 11;
+        z-index: 1;
     }
 
     .logo {
@@ -130,6 +130,12 @@ margin-top: 60px;
         cursor: pointer;
         margin-left: 25px;
         text-transform: uppercase;
+        background-image: url(fire-flames.gif);
+        background-size: cover;
+        background-position: center;
+        color: transparent;
+        background-clip: text;
+        -webkit-background-clip: text;
     }
 
     .navitems {
@@ -138,11 +144,11 @@ margin-top: 60px;
 
     .navitems li {
         list-style: none;
-        margin: 0px 25px;
+        margin: 0px 13px;
     }
 
     .navitems li a {
-        font-size: 25px;
+        font-size: 14px;
         letter-spacing: 1px;
     }
 
@@ -152,21 +158,20 @@ margin-top: 60px;
         margin: 25px 18px 25px 25px;
     }
 
-    .box1{
-        display: block;
+    .box1 {
+        display: inline;
         width: 100%;
-        height: 250px;
-        justify-content: space-evenly;
-        margin-top: 60px;
-        }
+        height: 950px;
+       margin: 60px;
+    }
 
-        .box2{
-            height: 20rem;
-            width: 26rem;
-            border-radius: 1rem;
-            margin: 2rem;
-            margin-bottom: 65px;
-            overflow: hidden;
-            cursor: pointer;
-        }
+    .box2 {
+        height: 200px;
+        width: 300px;
+        border-radius: 10px;
+       
+        margin-bottom: 65px;
+        overflow: hidden;
+        cursor: pointer;
+    }
 }
